<resources>
    <string name="app_name">Item Tracking COMBOBULATOR</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add_items">Edit Items</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="title_activity_setup_trip">SetupTripActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_required">Enter email</string>
    <string name="email">Email</string>
    <string name="incorrect_email">Email is invalid</string>
    <string name="password_required">Enter password</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="incorrect_password">Invalid password or username.</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="edit_items_activity_welcome">Current items</string>
    <string name="add_items">Add Item</string>
    <string name="name_of_list_box">Name of Item List</string>
    <string name="select_items_text">Select Items For Trip</string>


    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
</resources>
